--- a/etf_expectancy.ipynb
+++ b/etf_expectancy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
        "4  National Center for Health Statistics (NCHS), CDC     NaN   NaN  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
        "Notes                                                                     NaN  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -523,7 +523,7 @@
        "Name: Indicator Category, dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,23 +534,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_clean = df[['Indicator Category','Indicator','Place']]"
+    "df_clean = df[['Indicator Category','Indicator','Place','Value']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +563,7 @@
        "Name: Indicator, dtype: int64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -600,29 +593,29 @@
        "San Diego County, CA               21\n",
        "Long Beach, CA                     13\n",
        "U.S. Total                         12\n",
-       "Las Vegas (Clark County), NV        7\n",
-       "Boston, MA                          7\n",
-       "San Francisco, CA                   7\n",
-       "Cleveland, OH                       7\n",
        "Los Angeles, CA                     7\n",
-       "Seattle, WA                         6\n",
-       "Oakland, CA                         6\n",
+       "Boston, MA                          7\n",
+       "Las Vegas (Clark County), NV        7\n",
+       "Cleveland, OH                       7\n",
+       "San Francisco, CA                   7\n",
        "New York, NY                        6\n",
+       "Oakland, CA                         6\n",
        "San Antonio, TX                     6\n",
+       "Seattle, WA                         6\n",
        "Washington, DC                      6\n",
-       "Fort Worth (Tarrant County), TX     5\n",
        "Kansas City, MO                     5\n",
+       "Fort Worth (Tarrant County), TX     5\n",
        "Denver, CO                          3\n",
        "Philadelphia, PA                    2\n",
-       "Chicago, IL                         1\n",
-       "Phoenix, AZ                         1\n",
        "Baltimore, MD                       1\n",
+       "Chicago, IL                         1\n",
        "Miami (Miami-Dade County), FL       1\n",
        "Atlanta (Fulton County), GA         1\n",
+       "Phoenix, AZ                         1\n",
        "Name: Place, dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -733,6 +726,7 @@
        "      <th></th>\n",
        "      <th>Indicator Category</th>\n",
        "      <th>Indicator</th>\n",
+       "      <th>Value</th>\n",
        "      <th>city</th>\n",
        "      <th>state</th>\n",
        "    </tr>\n",
@@ -742,6 +736,7 @@
        "      <th>50</th>\n",
        "      <td>Life Expectancy and Death Rate (Overall)</td>\n",
        "      <td>Life Expectancy at Birth (Years)</td>\n",
+       "      <td>78.0</td>\n",
        "      <td>Atlanta (Fulton County)</td>\n",
        "      <td>GA</td>\n",
        "    </tr>\n",
@@ -749,6 +744,7 @@
        "      <th>120</th>\n",
        "      <td>Life Expectancy and Death Rate (Overall)</td>\n",
        "      <td>Life Expectancy at Birth (Years)</td>\n",
+       "      <td>70.4</td>\n",
        "      <td>Cleveland</td>\n",
        "      <td>OH</td>\n",
        "    </tr>\n",
@@ -756,6 +752,7 @@
        "      <th>159</th>\n",
        "      <td>Life Expectancy and Death Rate (Overall)</td>\n",
        "      <td>Life Expectancy at Birth (Years)</td>\n",
+       "      <td>76.7</td>\n",
        "      <td>Cleveland</td>\n",
        "      <td>OH</td>\n",
        "    </tr>\n",
@@ -763,6 +760,7 @@
        "      <th>366</th>\n",
        "      <td>Life Expectancy and Death Rate (Overall)</td>\n",
        "      <td>Life Expectancy at Birth (Years)</td>\n",
+       "      <td>73.9</td>\n",
        "      <td>Baltimore</td>\n",
        "      <td>MD</td>\n",
        "    </tr>\n",
@@ -770,6 +768,7 @@
        "      <th>427</th>\n",
        "      <td>Life Expectancy and Death Rate (Overall)</td>\n",
        "      <td>Life Expectancy at Birth (Years)</td>\n",
+       "      <td>73.6</td>\n",
        "      <td>Cleveland</td>\n",
        "      <td>OH</td>\n",
        "    </tr>\n",
@@ -785,15 +784,15 @@
        "366  Life Expectancy and Death Rate (Overall)   \n",
        "427  Life Expectancy and Death Rate (Overall)   \n",
        "\n",
-       "                            Indicator                     city state  \n",
-       "50   Life Expectancy at Birth (Years)  Atlanta (Fulton County)    GA  \n",
-       "120  Life Expectancy at Birth (Years)                Cleveland    OH  \n",
-       "159  Life Expectancy at Birth (Years)                Cleveland    OH  \n",
-       "366  Life Expectancy at Birth (Years)                Baltimore    MD  \n",
-       "427  Life Expectancy at Birth (Years)                Cleveland    OH  "
+       "                            Indicator  Value                     city state  \n",
+       "50   Life Expectancy at Birth (Years)   78.0  Atlanta (Fulton County)    GA  \n",
+       "120  Life Expectancy at Birth (Years)   70.4                Cleveland    OH  \n",
+       "159  Life Expectancy at Birth (Years)   76.7                Cleveland    OH  \n",
+       "366  Life Expectancy at Birth (Years)   73.9                Baltimore    MD  \n",
+       "427  Life Expectancy at Birth (Years)   73.6                Cleveland    OH  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,12 +803,237 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Portland (Multnomah County)    24\n",
+       "San Diego County               21\n",
+       "Long Beach                     13\n",
+       "U.S. Total                     12\n",
+       "Cleveland                       7\n",
+       "Los Angeles                     7\n",
+       "San Francisco                   7\n",
+       "Las Vegas (Clark County)        7\n",
+       "Boston                          7\n",
+       "New York                        6\n",
+       "Seattle                         6\n",
+       "Oakland                         6\n",
+       "San Antonio                     6\n",
+       "Washington                      6\n",
+       "Kansas City                     5\n",
+       "Fort Worth (Tarrant County)     5\n",
+       "Denver                          3\n",
+       "Philadelphia                    2\n",
+       "Phoenix                         1\n",
+       "Miami (Miami-Dade County)       1\n",
+       "Atlanta (Fulton County)         1\n",
+       "Chicago                         1\n",
+       "Baltimore                       1\n",
+       "Name: city, dtype: int64"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_expectancy['city'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Indicator Category</th>\n",
+       "      <th>Indicator</th>\n",
+       "      <th>Value</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>Life Expectancy and Death Rate (Overall)</td>\n",
+       "      <td>Life Expectancy at Birth (Years)</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>Atlanta</td>\n",
+       "      <td>GA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120</th>\n",
+       "      <td>Life Expectancy and Death Rate (Overall)</td>\n",
+       "      <td>Life Expectancy at Birth (Years)</td>\n",
+       "      <td>70.4</td>\n",
+       "      <td>Cleveland</td>\n",
+       "      <td>OH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159</th>\n",
+       "      <td>Life Expectancy and Death Rate (Overall)</td>\n",
+       "      <td>Life Expectancy at Birth (Years)</td>\n",
+       "      <td>76.7</td>\n",
+       "      <td>Cleveland</td>\n",
+       "      <td>OH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>366</th>\n",
+       "      <td>Life Expectancy and Death Rate (Overall)</td>\n",
+       "      <td>Life Expectancy at Birth (Years)</td>\n",
+       "      <td>73.9</td>\n",
+       "      <td>Baltimore</td>\n",
+       "      <td>MD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>427</th>\n",
+       "      <td>Life Expectancy and Death Rate (Overall)</td>\n",
+       "      <td>Life Expectancy at Birth (Years)</td>\n",
+       "      <td>73.6</td>\n",
+       "      <td>Cleveland</td>\n",
+       "      <td>OH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13361</th>\n",
+       "      <td>Life Expectancy and Death Rate (Overall)</td>\n",
+       "      <td>Life Expectancy at Birth (Years)</td>\n",
+       "      <td>81.8</td>\n",
+       "      <td>Long Beach</td>\n",
+       "      <td>CA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13362</th>\n",
+       "      <td>Life Expectancy and Death Rate (Overall)</td>\n",
+       "      <td>Life Expectancy at Birth (Years)</td>\n",
+       "      <td>82.8</td>\n",
+       "      <td>Long Beach</td>\n",
+       "      <td>CA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13363</th>\n",
+       "      <td>Life Expectancy and Death Rate (Overall)</td>\n",
+       "      <td>Life Expectancy at Birth (Years)</td>\n",
+       "      <td>82.8</td>\n",
+       "      <td>Long Beach</td>\n",
+       "      <td>CA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13364</th>\n",
+       "      <td>Life Expectancy and Death Rate (Overall)</td>\n",
+       "      <td>Life Expectancy at Birth (Years)</td>\n",
+       "      <td>82.8</td>\n",
+       "      <td>Long Beach</td>\n",
+       "      <td>CA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13365</th>\n",
+       "      <td>Life Expectancy and Death Rate (Overall)</td>\n",
+       "      <td>Life Expectancy at Birth (Years)</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>Long Beach</td>\n",
+       "      <td>CA</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>155 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             Indicator Category  \\\n",
+       "50     Life Expectancy and Death Rate (Overall)   \n",
+       "120    Life Expectancy and Death Rate (Overall)   \n",
+       "159    Life Expectancy and Death Rate (Overall)   \n",
+       "366    Life Expectancy and Death Rate (Overall)   \n",
+       "427    Life Expectancy and Death Rate (Overall)   \n",
+       "...                                         ...   \n",
+       "13361  Life Expectancy and Death Rate (Overall)   \n",
+       "13362  Life Expectancy and Death Rate (Overall)   \n",
+       "13363  Life Expectancy and Death Rate (Overall)   \n",
+       "13364  Life Expectancy and Death Rate (Overall)   \n",
+       "13365  Life Expectancy and Death Rate (Overall)   \n",
+       "\n",
+       "                              Indicator  Value        city state  \n",
+       "50     Life Expectancy at Birth (Years)   78.0     Atlanta    GA  \n",
+       "120    Life Expectancy at Birth (Years)   70.4   Cleveland    OH  \n",
+       "159    Life Expectancy at Birth (Years)   76.7   Cleveland    OH  \n",
+       "366    Life Expectancy at Birth (Years)   73.9   Baltimore    MD  \n",
+       "427    Life Expectancy at Birth (Years)   73.6   Cleveland    OH  \n",
+       "...                                 ...    ...         ...   ...  \n",
+       "13361  Life Expectancy at Birth (Years)   81.8  Long Beach    CA  \n",
+       "13362  Life Expectancy at Birth (Years)   82.8  Long Beach    CA  \n",
+       "13363  Life Expectancy at Birth (Years)   82.8  Long Beach    CA  \n",
+       "13364  Life Expectancy at Birth (Years)   82.8  Long Beach    CA  \n",
+       "13365  Life Expectancy at Birth (Years)   83.0  Long Beach    CA  \n",
+       "\n",
+       "[155 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_expectancy.replace({'Portland (Multnomah County)':'Portland','San Diego County':'San Diego','Las Vegas (Clark County)':'Las Vegas','Fort Worth (Tarrant County)':'Fort Worth','Miami (Miami-Dade County)':'Miami','Atlanta (Fulton County)':'Atlanta'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_school_obese.to_place(regex'Boston,MA':'')"
+    "df_expectancy = df_expectancy[['Value','city','state']]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_expectancy = df_expectancy.rename(columns={'Value':'life_expectancy'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
