--- a/etf_expectancy.ipynb
+++ b/etf_expectancy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
        "4  National Center for Health Statistics (NCHS), CDC     NaN   NaN  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
        "Notes                                                                     NaN  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 49,
    "metadata": {
     "scrolled": true
    },
@@ -523,7 +523,7 @@
        "Name: Indicator Category, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
        "Name: Indicator, dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
        "Name: Place, dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +792,7 @@
        "427  Life Expectancy at Birth (Years)   73.6                Cleveland    OH  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +835,7 @@
        "Name: city, dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +846,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_expectancy = df_expectancy.replace({'Portland (Multnomah County)':'Portland','San Diego County':'San Diego','Las Vegas (Clark County)':'Las Vegas','Fort Worth (Tarrant County)':'Fort Worth','Miami (Miami-Dade County)':'Miami','Atlanta (Fulton County)':'Atlanta'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_expectancy = df_expectancy[['Value','city','state']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_expectancy = df_expectancy.rename(columns={'Value':'life_expectancy'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -870,50 +897,38 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Indicator Category</th>\n",
-       "      <th>Indicator</th>\n",
-       "      <th>Value</th>\n",
+       "      <th>life_expectancy</th>\n",
        "      <th>city</th>\n",
        "      <th>state</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <td>Life Expectancy and Death Rate (Overall)</td>\n",
-       "      <td>Life Expectancy at Birth (Years)</td>\n",
+       "      <th>0</th>\n",
        "      <td>78.0</td>\n",
        "      <td>Atlanta</td>\n",
        "      <td>GA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>120</th>\n",
-       "      <td>Life Expectancy and Death Rate (Overall)</td>\n",
-       "      <td>Life Expectancy at Birth (Years)</td>\n",
+       "      <th>1</th>\n",
        "      <td>70.4</td>\n",
        "      <td>Cleveland</td>\n",
        "      <td>OH</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>159</th>\n",
-       "      <td>Life Expectancy and Death Rate (Overall)</td>\n",
-       "      <td>Life Expectancy at Birth (Years)</td>\n",
+       "      <th>2</th>\n",
        "      <td>76.7</td>\n",
        "      <td>Cleveland</td>\n",
        "      <td>OH</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>366</th>\n",
-       "      <td>Life Expectancy and Death Rate (Overall)</td>\n",
-       "      <td>Life Expectancy at Birth (Years)</td>\n",
+       "      <th>3</th>\n",
        "      <td>73.9</td>\n",
        "      <td>Baltimore</td>\n",
        "      <td>MD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>427</th>\n",
-       "      <td>Life Expectancy and Death Rate (Overall)</td>\n",
-       "      <td>Life Expectancy at Birth (Years)</td>\n",
+       "      <th>4</th>\n",
        "      <td>73.6</td>\n",
        "      <td>Cleveland</td>\n",
        "      <td>OH</td>\n",
@@ -923,109 +938,66 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13361</th>\n",
-       "      <td>Life Expectancy and Death Rate (Overall)</td>\n",
-       "      <td>Life Expectancy at Birth (Years)</td>\n",
+       "      <th>150</th>\n",
        "      <td>81.8</td>\n",
        "      <td>Long Beach</td>\n",
        "      <td>CA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13362</th>\n",
-       "      <td>Life Expectancy and Death Rate (Overall)</td>\n",
-       "      <td>Life Expectancy at Birth (Years)</td>\n",
+       "      <th>151</th>\n",
        "      <td>82.8</td>\n",
        "      <td>Long Beach</td>\n",
        "      <td>CA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13363</th>\n",
-       "      <td>Life Expectancy and Death Rate (Overall)</td>\n",
-       "      <td>Life Expectancy at Birth (Years)</td>\n",
+       "      <th>152</th>\n",
        "      <td>82.8</td>\n",
        "      <td>Long Beach</td>\n",
        "      <td>CA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13364</th>\n",
-       "      <td>Life Expectancy and Death Rate (Overall)</td>\n",
-       "      <td>Life Expectancy at Birth (Years)</td>\n",
+       "      <th>153</th>\n",
        "      <td>82.8</td>\n",
        "      <td>Long Beach</td>\n",
        "      <td>CA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13365</th>\n",
-       "      <td>Life Expectancy and Death Rate (Overall)</td>\n",
-       "      <td>Life Expectancy at Birth (Years)</td>\n",
+       "      <th>154</th>\n",
        "      <td>83.0</td>\n",
        "      <td>Long Beach</td>\n",
        "      <td>CA</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>155 rows × 5 columns</p>\n",
+       "<p>155 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                             Indicator Category  \\\n",
-       "50     Life Expectancy and Death Rate (Overall)   \n",
-       "120    Life Expectancy and Death Rate (Overall)   \n",
-       "159    Life Expectancy and Death Rate (Overall)   \n",
-       "366    Life Expectancy and Death Rate (Overall)   \n",
-       "427    Life Expectancy and Death Rate (Overall)   \n",
-       "...                                         ...   \n",
-       "13361  Life Expectancy and Death Rate (Overall)   \n",
-       "13362  Life Expectancy and Death Rate (Overall)   \n",
-       "13363  Life Expectancy and Death Rate (Overall)   \n",
-       "13364  Life Expectancy and Death Rate (Overall)   \n",
-       "13365  Life Expectancy and Death Rate (Overall)   \n",
+       "     life_expectancy        city state\n",
+       "0               78.0     Atlanta    GA\n",
+       "1               70.4   Cleveland    OH\n",
+       "2               76.7   Cleveland    OH\n",
+       "3               73.9   Baltimore    MD\n",
+       "4               73.6   Cleveland    OH\n",
+       "..               ...         ...   ...\n",
+       "150             81.8  Long Beach    CA\n",
+       "151             82.8  Long Beach    CA\n",
+       "152             82.8  Long Beach    CA\n",
+       "153             82.8  Long Beach    CA\n",
+       "154             83.0  Long Beach    CA\n",
        "\n",
-       "                              Indicator  Value        city state  \n",
-       "50     Life Expectancy at Birth (Years)   78.0     Atlanta    GA  \n",
-       "120    Life Expectancy at Birth (Years)   70.4   Cleveland    OH  \n",
-       "159    Life Expectancy at Birth (Years)   76.7   Cleveland    OH  \n",
-       "366    Life Expectancy at Birth (Years)   73.9   Baltimore    MD  \n",
-       "427    Life Expectancy at Birth (Years)   73.6   Cleveland    OH  \n",
-       "...                                 ...    ...         ...   ...  \n",
-       "13361  Life Expectancy at Birth (Years)   81.8  Long Beach    CA  \n",
-       "13362  Life Expectancy at Birth (Years)   82.8  Long Beach    CA  \n",
-       "13363  Life Expectancy at Birth (Years)   82.8  Long Beach    CA  \n",
-       "13364  Life Expectancy at Birth (Years)   82.8  Long Beach    CA  \n",
-       "13365  Life Expectancy at Birth (Years)   83.0  Long Beach    CA  \n",
-       "\n",
-       "[155 rows x 5 columns]"
+       "[155 rows x 3 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_expectancy.replace({'Portland (Multnomah County)':'Portland','San Diego County':'San Diego','Las Vegas (Clark County)':'Las Vegas','Fort Worth (Tarrant County)':'Fort Worth','Miami (Miami-Dade County)':'Miami','Atlanta (Fulton County)':'Atlanta'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_expectancy = df_expectancy[['Value','city','state']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_expectancy = df_expectancy.rename(columns={'Value':'life_expectancy'})"
+    "df_expectancy.reset_index(drop=True)"
    ]
   },
   {
