--- a/etf_expectancy.ipynb
+++ b/etf_expectancy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
        "4  National Center for Health Statistics (NCHS), CDC     NaN   NaN  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
        "Notes                                                                     NaN  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -523,7 +523,7 @@
        "Name: Indicator Category, dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
        "Name: Indicator, dtype: int64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -593,29 +593,29 @@
        "San Diego County, CA               21\n",
        "Long Beach, CA                     13\n",
        "U.S. Total                         12\n",
-       "Los Angeles, CA                     7\n",
-       "Boston, MA                          7\n",
-       "Las Vegas (Clark County), NV        7\n",
-       "Cleveland, OH                       7\n",
        "San Francisco, CA                   7\n",
-       "New York, NY                        6\n",
+       "Boston, MA                          7\n",
+       "Cleveland, OH                       7\n",
+       "Las Vegas (Clark County), NV        7\n",
+       "Los Angeles, CA                     7\n",
+       "Seattle, WA                         6\n",
        "Oakland, CA                         6\n",
        "San Antonio, TX                     6\n",
-       "Seattle, WA                         6\n",
        "Washington, DC                      6\n",
-       "Kansas City, MO                     5\n",
+       "New York, NY                        6\n",
        "Fort Worth (Tarrant County), TX     5\n",
+       "Kansas City, MO                     5\n",
        "Denver, CO                          3\n",
        "Philadelphia, PA                    2\n",
-       "Baltimore, MD                       1\n",
-       "Chicago, IL                         1\n",
-       "Miami (Miami-Dade County), FL       1\n",
        "Atlanta (Fulton County), GA         1\n",
+       "Miami (Miami-Dade County), FL       1\n",
+       "Chicago, IL                         1\n",
+       "Baltimore, MD                       1\n",
        "Phoenix, AZ                         1\n",
        "Name: Place, dtype: int64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +792,7 @@
        "427  Life Expectancy at Birth (Years)   73.6                Cleveland    OH  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -813,29 +813,29 @@
        "San Diego County               21\n",
        "Long Beach                     13\n",
        "U.S. Total                     12\n",
-       "Cleveland                       7\n",
-       "Los Angeles                     7\n",
        "San Francisco                   7\n",
+       "Cleveland                       7\n",
        "Las Vegas (Clark County)        7\n",
        "Boston                          7\n",
-       "New York                        6\n",
-       "Seattle                         6\n",
+       "Los Angeles                     7\n",
        "Oakland                         6\n",
        "San Antonio                     6\n",
+       "New York                        6\n",
+       "Seattle                         6\n",
        "Washington                      6\n",
        "Kansas City                     5\n",
        "Fort Worth (Tarrant County)     5\n",
        "Denver                          3\n",
        "Philadelphia                    2\n",
+       "Baltimore                       1\n",
        "Phoenix                         1\n",
-       "Miami (Miami-Dade County)       1\n",
        "Atlanta (Fulton County)         1\n",
        "Chicago                         1\n",
-       "Baltimore                       1\n",
+       "Miami (Miami-Dade County)       1\n",
        "Name: city, dtype: int64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +873,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_expectancy = df_expectancy.reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -933,71 +942,35 @@
        "      <td>Cleveland</td>\n",
        "      <td>OH</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>150</th>\n",
-       "      <td>81.8</td>\n",
-       "      <td>Long Beach</td>\n",
-       "      <td>CA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>151</th>\n",
-       "      <td>82.8</td>\n",
-       "      <td>Long Beach</td>\n",
-       "      <td>CA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>152</th>\n",
-       "      <td>82.8</td>\n",
-       "      <td>Long Beach</td>\n",
-       "      <td>CA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>153</th>\n",
-       "      <td>82.8</td>\n",
-       "      <td>Long Beach</td>\n",
-       "      <td>CA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>154</th>\n",
-       "      <td>83.0</td>\n",
-       "      <td>Long Beach</td>\n",
-       "      <td>CA</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>155 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     life_expectancy        city state\n",
-       "0               78.0     Atlanta    GA\n",
-       "1               70.4   Cleveland    OH\n",
-       "2               76.7   Cleveland    OH\n",
-       "3               73.9   Baltimore    MD\n",
-       "4               73.6   Cleveland    OH\n",
-       "..               ...         ...   ...\n",
-       "150             81.8  Long Beach    CA\n",
-       "151             82.8  Long Beach    CA\n",
-       "152             82.8  Long Beach    CA\n",
-       "153             82.8  Long Beach    CA\n",
-       "154             83.0  Long Beach    CA\n",
-       "\n",
-       "[155 rows x 3 columns]"
+       "   life_expectancy       city state\n",
+       "0             78.0    Atlanta    GA\n",
+       "1             70.4  Cleveland    OH\n",
+       "2             76.7  Cleveland    OH\n",
+       "3             73.9  Baltimore    MD\n",
+       "4             73.6  Cleveland    OH"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_expectancy.reset_index(drop=True)"
+    "df_expectancy.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_expectancy.to_csv('expectancy.csv')"
    ]
   },
   {
