--- a/etf_expectancy.ipynb
+++ b/etf_expectancy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
        "4  National Center for Health Statistics (NCHS), CDC     NaN   NaN  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
        "Notes                                                                     NaN  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "metadata": {
     "scrolled": true
    },
@@ -523,7 +523,7 @@
        "Name: Indicator Category, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
        "Name: Indicator, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
        "Name: Place, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +792,7 @@
        "427  Life Expectancy at Birth (Years)   73.6                Cleveland    OH  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +835,7 @@
        "Name: city, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,7 +882,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_expectancy = df_expectancy.groupby(['city']).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -907,55 +916,48 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>life_expectancy</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>city</th>\n",
-       "      <th>state</th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>78.0</td>\n",
-       "      <td>Atlanta</td>\n",
-       "      <td>GA</td>\n",
+       "      <th>Atlanta</th>\n",
+       "      <td>78.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>70.4</td>\n",
-       "      <td>Cleveland</td>\n",
-       "      <td>OH</td>\n",
+       "      <th>Baltimore</th>\n",
+       "      <td>73.900000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>76.7</td>\n",
-       "      <td>Cleveland</td>\n",
-       "      <td>OH</td>\n",
+       "      <th>Boston</th>\n",
+       "      <td>81.442857</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>73.9</td>\n",
-       "      <td>Baltimore</td>\n",
-       "      <td>MD</td>\n",
+       "      <th>Chicago</th>\n",
+       "      <td>78.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>73.6</td>\n",
-       "      <td>Cleveland</td>\n",
-       "      <td>OH</td>\n",
+       "      <th>Cleveland</th>\n",
+       "      <td>76.828571</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   life_expectancy       city state\n",
-       "0             78.0    Atlanta    GA\n",
-       "1             70.4  Cleveland    OH\n",
-       "2             76.7  Cleveland    OH\n",
-       "3             73.9  Baltimore    MD\n",
-       "4             73.6  Cleveland    OH"
+       "           life_expectancy\n",
+       "city                      \n",
+       "Atlanta          78.000000\n",
+       "Baltimore        73.900000\n",
+       "Boston           81.442857\n",
+       "Chicago          78.000000\n",
+       "Cleveland        76.828571"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
