--- a/jays-folder/jaysueno-ETL.ipynb
+++ b/jays-folder/jaysueno-ETL.ipynb
@@ -708,6 +708,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a csv file from your fastfood_df using .to_csv()\n",
+    "fastfood_df.to_csv('fastfood.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [],
